fix(frontend): handle popup kanban overflow

--- a/frontend_app_kanban/src/css/index.styl
+++ b/frontend_app_kanban/src/css/index.styl
@@ -187,5 +187,12 @@ cardWidth = 280px
 @media (max-width: max-xs)
   .kanban__KanbanPopup
     top 10%
+    max-height "calc(100% - %s)" % (headerHeight + standardSpacing)
     & .cardPopup__container
       min-width 100%
+      max-height 100%
+      overflow auto
+      & .cardPopup__body
+        height "calc(100% - %s)" % headerHeight
+        & .kanban__KanbanPopup__form
+          height "calc(100% - %s)" % standardSpacing
